--- a/beboppersonages.html
+++ b/beboppersonages.html
@@ -15,7 +15,7 @@
     <header>
 
     <nav>
-      <img src="images/cowboy_bebop_intertitle.jpg" alt="Cowboy Bebop logo">
+      <img src="cowboy_bebop_intertitle.jpg" alt="Cowboy Bebop logo">
       <ul>
        <li> <a href="index.html"> Home </a> </li>
         <li> <a href="beboppersonages.html"> Personages </a> </li>
@@ -33,7 +33,7 @@
     <article>
      <h2> Spike Spiegel </h2>
      <div class="wrapped">
-       <img src="images/spikespiegelteken.jpeg" alt="Afbeelding van Spike Spiegel">
+       <img src="spikespiegelteken.jpeg" alt="Afbeelding van Spike Spiegel">
         <p> Spike Spiegel (Katakana: スパイク・スピーゲル Romaji: Supaiku Supīgeru) is een premiejager op een ruimteschip genaamd de Bebop 
         en reist met zijn bemanning door de ruimte. Voordat hij premiejager werd, was Spike lid van het Red Dragon Crime Syndicate. Spike toonde veel talenten en capaciteiten,
        waaronder vaardigheid in man-tegen-man-gevechten en vechtsporten.
@@ -44,7 +44,7 @@
     <article>
       <h2> Faye Valentine </h2>
       <div class="wrapped">
-       <img src="images/faye.jpg" alt="Afbeelding van Faye Valentine">
+       <img src="faye.jpg" alt="Afbeelding van Faye Valentine">
        <p>
         Faye Valentine (Katakana: フェイ・ヴァレンタイン Romaji: Fei Varentain) 
         Is een voormalig gezocht premiehoofd die later lid werd 
@@ -57,7 +57,7 @@
     <article>
      <h2> Jet Black </h2>
      <div class="wrapped">
-        <img src="images/jetblak.jpg" alt="Afbeelding van Jet Black">
+        <img src="jetblak.jpg" alt="Afbeelding van Jet Black">
         <p>
         Jet Black (Katakana: ジェット・ブラック Romaji: Jetto Burakku), ook bekend als "Black Dog" (Black Dog, Burakku Doggu), is een officier van het ISSP en later premiejager. Hij werkte samen met Fad totdat hij halverwege de jaren zestig zijn arm verloor. Vervolgens was hij aanvoerder van de Bebop en leidde een bemanning voor de premiejacht, 
        waaronder hijzelf, Spike Spiegel, Faye Valentine en Edward. </p>
@@ -67,7 +67,7 @@
     <article>
       <h2> Edward </h2>
       <div class="wrapped">
-        <img src="images/edwar.jpeg" alt="Afbeelding van Edward">
+        <img src="edwar.jpeg" alt="Afbeelding van Edward">
         <p>
        Edward Wong Hau Pepelu Tivruski IV (Katakana: エドワード・ウォン・ハウ・ペペル・チブルスキー4世 Romaji: Edowādo Won Hau Peperu Chiburusukī Yonsei), 
        geboren Françoise Appledelhi en in de volksmond bekend als Radical Edward, 
@@ -79,7 +79,7 @@
       <article>
       <h2> Ein </h2>
       <div class="wrapped">
-        <img src="images/einbop.jpg" alt="Afbeelding van de personage Ein van Cowboy Bebop">
+        <img src="einbop.jpg" alt="Afbeelding van de personage Ein van Cowboy Bebop">
        <p>
      Ein (Katakana: アイン Romaji: Ain) is een Pembroke Welsh Corgi en 'datahond', wat betekent dat zijn intelligentie enorm verbeterd werd door een onderzoeksfaciliteit.
      Wat er precies met hem werd gedaan, was niet algemeen bekend. 
@@ -88,7 +88,7 @@
       </article>
 
     <div class="topknop">
-      <a href="#boven"> <img src="images/arrow.png" alt="Foto van witte pijl naar boven"> </a> </div>
+      <a href="#boven"> <img src="arrow.png" alt="Foto van witte pijl naar boven"> </a> </div>
 
     <p> ***niet mijn eigen tekst!!*** </p>
 
@@ -98,7 +98,7 @@
     <div class="knop">
     <a href="bebopbronnen.html"> Bronnen </a> </div>
      <a href=https://www.websitecarbon.com/website/evaangela-github-io-cowboybebopwiki>
-        <img src="images/carbonfootprint.png" alt="Foto van de CO2-voetafdruk: een A+ beoordeling"></a>
+        <img src="carbonfootprint.png" alt="Foto van de CO2-voetafdruk: een A+ beoordeling"></a>
 <!-- https://flexboxfroggy.com/#nl voor het begrijpen van flexboxes gebruikt!-->
    </footer>
 
