--- a/bebopbronnen.html
+++ b/bebopbronnen.html
@@ -13,7 +13,7 @@
   <header>
 
     <nav>
-      <img src="images/cowboy_bebop_intertitle.jpg" alt="Cowboy Bebop logo">
+      <img src="cowboy_bebop_intertitle.jpg" alt="Cowboy Bebop logo">
       <ul>
         <li> <a href="index.html"> Home </a> </li>
         <li> <a href="beboppersonages.html"> Personages </a> </li>
@@ -62,7 +62,7 @@
   </p>
 
   <div class="topknop">
-  <a href="#boven"> <img src="images/arrow.png" alt="Foto van witte pijl naar boven"> </a> </div>
+  <a href="#boven"> <img src="arrow.png" alt="Foto van witte pijl naar boven"> </a> </div>
 
   </main>
 
@@ -70,7 +70,7 @@
     <div class="knop">
     <a href="bebopbronnen.html"> Bronnen </a> </div>
     <a href=https://www.websitecarbon.com/website/evaangela-github-io-cowboybebopwiki>
-       <img src="images/carbonfootprint.png" alt="Foto van de CO2-voetafdruk: een A+ beoordeling"></a>
+       <img src="carbonfootprint.png" alt="Foto van de CO2-voetafdruk: een A+ beoordeling"></a>
   <!-- https://flexboxfroggy.com/#nl voor het begrijpen van flexboxes gebruikt!-->
   </footer>
 
