--- a/bebopplot.html
+++ b/bebopplot.html
@@ -15,7 +15,7 @@
 <header>
 
 <nav>
-  <img src="images/cowboy_bebop_intertitle.jpg" alt="Cowboy Bebop logo">
+  <img src="cowboy_bebop_intertitle.jpg" alt="Cowboy Bebop logo">
  <ul>
     <li> <a href="index.html"> Home </a> </li>
     <li> <a href="beboppersonages.html"> Personages </a> </li>
@@ -24,7 +24,7 @@
   </ul>
 </nav>
 
-  <h1 class="boven"> Plot </h1> 
+  <h1 id="boven"> Plot </h1> 
 
 </header>
 
@@ -106,7 +106,7 @@ Watch Cowboy Bebop, a live-action series, only on Netflix Nov. 19. https://www.n
 </article>
 
 <div class="topknop">
-  <a href="#boven"> <img src="images/arrow.png" alt="Foto van witte pijl naar boven"> </a>
+  <a href="#boven"> <img src="arrow.png" alt="Foto van witte pijl naar boven"> </a>
 </div>
 
 </main>
@@ -115,7 +115,7 @@ Watch Cowboy Bebop, a live-action series, only on Netflix Nov. 19. https://www.n
   <div class="knop">
    <a href="bebopbronnen.html"> Bronnen </a> </div>
     <a href=https://www.websitecarbon.com/website/evaangela-github-io-cowboybebopwiki>
-       <img src="images/carbonfootprint.png" alt="Foto van de CO2-voetafdruk: een A+ beoordeling"></a>
+       <img src="carbonfootprint.png" alt="Foto van de CO2-voetafdruk: een A+ beoordeling"></a>
 <!-- https://flexboxfroggy.com/#nl voor het begrijpen van flexboxes gebruikt!-->
 </footer>
 
