--- a/bebopsoundtracks.html
+++ b/bebopsoundtracks.html
@@ -14,7 +14,7 @@
     <header>
 
       <nav>
-        <img src="images/cowboy_bebop_intertitle.jpg" alt="Cowboy Bebop logo">
+        <img src="cowboy_bebop_intertitle.jpg" alt="Cowboy Bebop logo">
         <ul>
          <li> <a href="index.html"> Home </a> </li>
          <li> <a href="beboppersonages.html"> Personages </a> </li>
@@ -35,7 +35,7 @@
       <h3> Informatie </h3>
 
      <div class="wrapped">
-      <img src="images/bebopalbumcover.jpeg" alt="Cowboy Bebop OST Album Cover">
+      <img src="bebopalbumcover.jpeg" alt="Cowboy Bebop OST Album Cover">
       <p> Dit is het eerste album dat gemaakt is voor de anime. Het is ook de meest herkenbare. 
     Het eerste liedje van de album 'Tank' werd gebruikt als het openingslied van de afleveringen. Dit lied was geschreven door 
     Japanse artiest Yoko Kanno en gespeeld door de band Seatbels. Veel van de nummers uit de serie behoren tot de jazzgenre en de substijl bebop. Een muziekstijl binnen het genre, waarvan de complexe ritmes en harmonieen vaak een dominante positie innemen.
@@ -161,7 +161,7 @@
   </article>
 
   <div class="topknop">
-    <a href="#boven"> <img src="images/arrow.png" alt="Foto van witte pijl naar boven"> </a>
+    <a href="#boven"> <img src="arrow.png" alt="Foto van witte pijl naar boven"> </a>
   </div>
 
   </main>
@@ -170,7 +170,7 @@
     <div class="knop">
     <a href="bebopbronnen.html"> Bronnen </a> </div>
      <a href=https://www.websitecarbon.com/website/evaangela-github-io-cowboybebopwiki>
-       <img src="images/carbonfootprint.png" alt="Foto van de CO2-voetafdruk: een A+ beoordeling"></a>
+       <img src="carbonfootprint.png" alt="Foto van de CO2-voetafdruk: een A+ beoordeling"></a>
 <!-- https://flexboxfroggy.com/#nl voor het begrijpen van flexboxes gebruikt!-->
   </footer>
 
