--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header>
 
     <nav>
-      <img src="images/cowboy_bebop_intertitle.jpg" alt="Cowboy Bebop logo">
+      <img src="cowboy_bebop_intertitle.jpg" alt="Cowboy Bebop logo">
     <ul>
       <li> <a href="index.html"> Home </a> </li>
       <li> <a href="beboppersonages.html"> Personages </a> </li>
@@ -32,9 +32,9 @@
 
     <section>
       <h2> Cowboy Bebop Wiki </h2>
-     <img src="images/pog.gif" alt="Bewegend plaatje van Edward die zwaait">
-     <img src="images/pog.gif" alt="Bewegend plaatje van Edward die zwaait">
-     <img src="images/pog.gif" alt="Bewegend plaatje van Edward die zwaait">
+     <img src="pog.gif" alt="Bewegend plaatje van Edward die zwaait">
+     <img src="pog.gif" alt="Bewegend plaatje van Edward die zwaait">
+     <img src="pog.gif" alt="Bewegend plaatje van Edward die zwaait">
 
       <p> 
       Hoi! Mijn naam is Eva Sinuraja en dit is mijn site voor een schoolopdracht. Mijn site gaat over een van mijn favoriete
@@ -50,14 +50,14 @@
      en op avonturen gaan in de ruimte.
       Wat bijzonder is aan deze serie, is hoe muziek, vooral van de jazzgenre, een grote rol speelt in het verhaal. De sfeer en bepaalde scene's of ruimte zijn ook daar omheen gebasseerd. 
      In Nederland werd de anime voor het eerst in 2006 uitgezonden op de televisiezender TMF, The Music Factory (heel erg passend!).</p>
-     <img src="images/pog.gif" alt="Bewegend plaatje van Edward die zwaait">
-     <img src="images/pog.gif" alt="Bewegend plaatje van Edward die zwaait">
-     <img src="images/pog.gif" alt="Bewegend plaatje van Edward die zwaait">
+     <img src="pog.gif" alt="Bewegend plaatje van Edward die zwaait">
+     <img src="pog.gif" alt="Bewegend plaatje van Edward die zwaait">
+     <img src="pog.gif" alt="Bewegend plaatje van Edward die zwaait">
 
     </section>
 
    <div class="topknop">
-    <a href="#boven"> <img src="images/arrow.png" alt="Foto van witte pijl naar boven"> </a>
+    <a href="#boven"> <img src="arrow.png" alt="Foto van witte pijl naar boven"> </a>
     </div>
 
   </main>
@@ -66,7 +66,7 @@
     <div class="knop">
      <a href="bebopbronnen.html"> Bronnen </a> </div>
       <a href=https://www.websitecarbon.com/website/evaangela-github-io-cowboybebopwiki>
-         <img src="images/carbonfootprint.png" alt="Foto van de CO2-voetafdruk: een A+ beoordeling"></a>
+         <img src="carbonfootprint.png" alt="Foto van de CO2-voetafdruk: een A+ beoordeling"></a>
   <!-- https://flexboxfroggy.com/#nl voor het begrijpen van flexboxes gebruikt!-->
   </footer>
 
